# sp1-bls12-381-pairing

program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: amcl_utils.rs  keys.rs  main.rs  signature.rs
script/: Cargo.toml
script/src/: main.rs
