[workspace]
[package]
version = "0.1.0"
name = "sp1-bls12-381-pairing-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bls12-381-precompile" }
sp1-derive = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bls12-381-precompile" }
rand = "0.8.5"
#snowbridge-amcl = { path = "../../incubator-milagro-crypto-rust", default-features = false, features = ["bls381"] }
snowbridge-amcl = { git = "https://github.com/0xkanekiken/incubator-milagro-crypto-rust", branch = "sp1-integration", default-features = false, features = ["bls381"]}
cfg-if = "1.0.0"