[workspace]
[package]
version = "0.1.0"
name = "sp1-bls12-381-pairing-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bls12-381-precompile" }
sp1-derive = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bls12-381-precompile" }
snowbridge-amcl = { path = "../../incubator-milagro-crypto-rust", default-features = false, features = ["bls381"] }
#snowbridge-amcl = { git = "https://github.com/0xkanekiken/incubator-milagro-crypto-rust", branch = "sp1-integration", default-features = false, features = ["bls381"]}
hex = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
rand = { version = "0.8.5", default-features = false }
zeroize = "1.0.0"
codec = { version = "3.6.1", package = "parity-scale-codec", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }