[workspace]
[package]
version = "0.1.0"
name = "sp1-bls12-381-pairing-script"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bls12-381-precompile" }

[build-dependencies]
sp1-helper = { git = "https://github.com/0xkanekiken/sp1.git", branch = "kaneki-bls12-381-precompile" }